Bug 820766 - The requester and requestee fields in the Requests page are way too small in narrow windows

--- a/skins/standard/buglist.css
+++ b/skins/standard/buglist.css
@@ -127,3 +127,17 @@ td.bz_total {
     color: inherit;
 }
 
+/* The "filtering" table is specific to request.cgi.
+ * Same for the "requests" class used for tables. */
+
+#filtering #requester,  #filtering #requestee {
+    min-width: 8em;
+}
+
+#filtering th {
+    text-align: right;
+}
+
+table.requests th {
+    text-align: left;
+}
